--- a/java/AndroidManifest.xml
+++ b/java/AndroidManifest.xml
@@ -106,6 +106,14 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".debug.ExternalDictionaryGetterForDebug">
+            <intent-filter>
+                <action android:name="com.android.inputmethod.latin.debug.ExternalDictionaryGetterForDebug" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <receiver android:name="SuggestionSpanPickedNotificationReceiver" android:enabled="true">
             <intent-filter>
                 <action android:name="android.text.style.SUGGESTION_PICKED" />
